--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.26.10",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.18.0"
   },
   "dependencies": {
